@@ -1,4 +1,10 @@
 2022-03-16  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* emacs/poke.el (poke-vu-refresh): Ask for the right number of
+	lines, taking the header and modeline into account.
+	(poke-repl): Do not show banner if repl is already alive.
+
+2022-03-16  Jose E. Marchesi  <jemarch@gnu.org>
 2022-03-16  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/ios-dev-stream.c (ios_dev_stream_pread): Fix call to
